# un80-sg-reports-survey

./: .env.template  .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.codex/environments/: environment.toml
data/: INFO
docs/: dri_matching_analysis.md  extraction_analysis.md
python/: 01_get_reports.py  02_populate_reporting_entities.py  03_generate_embeddings.py  04_extract_mandate_info.py  05_ai_entity_suggestions.py  06_calculate_frequencies.py  compare_search_approaches.py  debug_azure_openai.py  extract_mandate_info.py  get_reports.py  populate_reporting_entities.py
python/util/: ai_client.py  metadata_cleaning.py  metadata_link_extraction.py
results/: chat-test-2026-01-30T12-27-25-582Z.json  chat-test-2026-01-30T12-32-33-041Z.json  chat-test-2026-01-30T14-14-18-196Z.json  chat-test-2026-01-30T14-18-18-256Z.json  chat-test-2026-01-30T14-20-11-451Z.json  chat-test-2026-01-31T10-22-20-876Z.json
scripts/: test-chat.ts
sql/: auth_tables.sql  create_chat_user.sql  frequency_confirmations_table.sql  latest_versions_view.sql  report_frequencies_table.sql  reporting_entities_table.sql  reports_table.sql  reports_tables.sql  survey_responses_table.sql  views.sql
sql/migrations/: 002_add_normalized_body.sql  003_add_entity_role.sql  004_manual_reports_migration.sql  005_multi_user_responses_and_admin_role.sql  006_drop_response_email_audit_columns.sql  007_admin_emails_whitelist.sql
sql/schema/: current_schema.sql
src/: middleware.ts  proxy.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Footer.tsx  (+17 more)
(+46 files in other folders)
